--- a/arch/arm/configs/microgea_mx6ull_defconfig
+++ b/arch/arm/configs/microgea_mx6ull_defconfig
@@ -157,6 +157,15 @@ CONFIG_SMSC911X=y
 CONFIG_MICREL_PHY=y
 CONFIG_MICROCHIP_PHY=y
 CONFIG_SMSC_PHY=y
+CONFIG_PPP=y
+CONFIG_PPP_BSDCOMP=y
+CONFIG_PPP_DEFLATE=y
+CONFIG_PPP_FILTER=y
+CONFIG_PPP_MPPE=y
+CONFIG_PPP_MULTILINK=y
+CONFIG_PPPOE=y
+CONFIG_PPP_ASYNC=y
+CONFIG_PPP_SYNC_TTY=y
 CONFIG_USB_KAWETH=y
 CONFIG_USB_PEGASUS=y
 CONFIG_USB_RTL8150=y
@@ -426,7 +435,6 @@ CONFIG_CRYPTO_DEV_FSL_CAAM=y
 CONFIG_CRYPTO_DEV_FSL_CAAM_SM_TEST=m
 CONFIG_CRYPTO_DEV_MXS_DCP=y
 CONFIG_CORDIC=y
-CONFIG_CRC_CCITT=m
 CONFIG_CRC_T10DIF=y
 CONFIG_CRC7=m
 CONFIG_LIBCRC32C=m
